--- a/ProjectManagementSystem/nbproject/private/private.properties
+++ b/ProjectManagementSystem/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/apache-tomcat-10.1.41-windows-x64/apache-tomcat-10.1.41
-j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.41-windows-x64\\apache-tomcat-10.1.41
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\26\\tomcat101.properties
+j2ee.server.home=C:/Users/Asus/Downloads/apache-tomcat-10.1.43/apache-tomcat-10.1.43
+j2ee.server.instance=tomcat101:home=C:\\Users\\Asus\\Downloads\\apache-tomcat-10.1.43\\apache-tomcat-10.1.43
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome.INTEGRATED
+user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\26\\build.properties
