--- a/ProjectManagementSystem/nbproject/private/private.properties
+++ b/ProjectManagementSystem/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 j2ee.server.home=C:/apache-tomcat-10.1.41-windows-x64/apache-tomcat-10.1.41
 j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.41-windows-x64\\apache-tomcat-10.1.41
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
